--- a/index.htm
+++ b/index.htm
@@ -1,15 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kunal Khare</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="main">
-        <div class="hero"></div>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
+  </head>
+  <body>
+    <header id="main">
+      <section class="hero">
+        <div class="background container-fluid">
+          <div class="unicorn-embed" id="kunalkhare">
+            <!-- Add content or embed here -->
+          </div>
+        </div>
+        <div class="overlay-hero">
+          <nav class="d-flex align-items-center justify-content-between">
+            <ul class="nav-links d-flex gap-5">
+              <a href="#">Home</a>
+              <a href="#">About</a>
+              <a href="#">Contact</a>
+            </ul>
+          </nav>
+          <div class="content-hero">
+            <div class="animated-logo">
+              <dotlottie-player
+                src="https://lottie.host/ef7e9434-159f-4b42-979e-717a1f9de8fd/t09IT7UbAh.lottie"
+                background="transparent"
+                speed="1"
+                style="width: 300px; height: 300px"
+                loop
+                autoplay
+              ></dotlottie-player>
+            </div>
+            <div class="btm-content">
+              <h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
+                obcaecati.
+                <div class="right-socials-footer">
+                  <ul class="social-links">
+                    <li>
+                      <a href="https://x.com/kunalkhareonx" target="_blank">
+                        <img class="x-logo" src="png/X-logo-2.png" alt="" />
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.linkedin.com/in/kunal-khare-6a712021b/"
+                        target="_blank"
+                      >
+                        <i class="fa-brands fa-linkedin"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/Kunal-Khare" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+    </header>
 
-    </div>
-</body>
+    <script
+      src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
+      type="module"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.unicorn.studio/v1.3.2/unicornStudio.umd.js"></script>
+
+    <script src="script.js"></script>
+  </body>
 </html>
