fotter- main context

--- a/before-alternative.html
+++ b/before-alternative.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,16 +20,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
-
-  
-
   </head>
   <body>
     <header id="main">
       <section class="hero">
         <div class="background container-fluid">
           <div class="unicorn-embed" id="kunalkhare">
-            <!-- Add content or embed here -->
+              
           </div>
         </div>
         <div class="overlay-hero">
@@ -52,39 +50,39 @@
             </div>
             <div class="btm-content">
               <h3>
-                I am a self taught developer, Passionate about crafting innovative solutions and
-                pushing the boundaries of technology. Obsessed with creating
+                🚀 Software Engineer | Web Developer | Web3 Enthusiast | Machine
+                Learning  Passionate about crafting innovative solutions
+                and pushing the boundaries of technology. Obsessed with creating
                 seamless user experiences and leveraging data to drive impactful
                 decisions. Always learning, always coding!
+                <div class="right-socials-footer">
+                  <ul class="social-links">
+                    <li>
+                      <a href="https://x.com/kunalkhareonx" target="_blank">
+                        <img class="x-logo" src="png/X-logo-2.png" alt="" />
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.linkedin.com/in/kunal-khare-6a712021b/"
+                        target="_blank"
+                      >
+                        <i class="fa-brands fa-linkedin"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/Kunal-Khare" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </h3>
             </div>
           </div>
         </div>
       </section>
     </header>
-
-    <footer class="social-footer">
-      <ul class="social-links">
-        <li>
-          <a href="https://x.com/kunalkhareonx" target="_blank">
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com/in/kunal-khare-6a712021b/"
-            target="_blank"
-          >
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/Kunal-Khare" target="_blank">
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </li>
-      </ul>
-    </footer>
 
     <script
       src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
@@ -101,3 +99,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+-->
